# tron

./: .env.example  README.md  pyproject.toml  requirements.txt  run.py  run_ui.py
.github/workflows/: ci.yml
scripts/: approve_allowance.py  setup_policy.py  setup_wallet.py  utils.py
src/: config.py  demo.py  display.py  facilitator_server.py  preflight.py  tron_client.py  ui_server.py  vendor_server.py  x402_flow.py
static/: index.html
tests/: test_config.py  test_display.py  test_preflight.py
