[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tron-preflight-demo"
version = "0.1.0"
description = "CLI demo: AI agent purchases API access via x402 on TRON Nile testnet with ICME Preflight verification"
requires-python = ">=3.10,<3.13"

dependencies = [
    "tvm-x402[all]",
    "eth-account",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
# Policy text is a fixed string with long lines
"src/config.py" = ["E501"]
# Scripts must call load_dotenv() / sys.path before src imports
"scripts/*.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
